# wss_fraud_classifier

./: .gitignore  pyproject.toml
02.Notebooks/: 01_import_testing.ipynb  02_features_visualization.ipynb  03_model_prototyping.ipynb
03.Src/: main.ipynb
03.Src/Data_prep/: data_preparer.py  prep_pipelines.py  prep_transformers.py
03.Src/Models/: model_building.py
03.Src/Utils/: logs_utils.py  numeric_utils.py  plots_utils.py  save_load_utils.py  string_utils.py
04.Configs/fitting/: fitting_params.py
04.Configs/prep/: preprocessing_config.py
06.Outputs/01.Models/: dev_model__GradientBoostingClassifier_10-24.joblib  dev_model__GradientBoostingClassifier_12-55.joblib
06.Outputs/03.Logs/: LOG_GradientBoostingClassifier_10-24.txt
