[project]
name = "wss-fraud-classifier"
version = "0.1.0"
description = "The project to define wrong elements of WSS in the construction sheet"
authors = [
    {name = "n.khabarov"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "anyio (==4.10.0)",
    "asttokens (==3.0.0)",
    "backports-tarfile (==1.2.0)",
    "build (==1.3.0)",
    "cachecontrol (==0.14.3)",
    "certifi (==2025.8.3)",
    "charset-normalizer (==3.4.2)",
    "colorama (==0.4.6)",
    "comm (==0.2.2)",
    "contourpy (==1.3.2)",
    "cycler (==0.12.1)",
    "debugpy (==1.8.14)",
    "decorator (==5.2.1)",
    "distlib (==0.4.0)",
    "dulwich (==0.22.8)",
    "et-xmlfile (==2.0.0)",
    "executing (==2.2.0)",
    "fastjsonschema (==2.21.1)",
    "filelock (==3.18.0)",
    "findpython (==0.6.3)",
    "fonttools (==4.58.0)",
    "h11 (==0.16.0)",
    "httpcore (==1.0.9)",
    "httpx (==0.28.1)",
    "idna (==3.10)",
    "importlib-metadata (==8.7.0)",
    "installer (==0.7.0)",
    "ipykernel (==6.29.5)",
    "ipython (==9.2.0)",
    "ipython-pygments-lexers (==1.1.1)",
    "jaraco-classes (==3.4.0)",
    "jaraco-context (==6.0.1)",
    "jaraco-functools (==4.2.1)",
    "jedi (==0.19.2)",
    "joblib (==1.5.0)",
    "jupyter-client (==8.6.3)",
    "jupyter-core (==5.7.2)",
    "keyring (==25.6.0)",
    "kiwisolver (==1.4.8)",
    "matplotlib (==3.10.3)",
    "matplotlib-inline (==0.1.7)",
    "more-itertools (==10.7.0)",
    "msgpack (==1.1.1)",
    "nest-asyncio (==1.6.0)",
    "numpy (==2.2.6)",
    "openpyxl (==3.1.5)",
    "packaging (==25.0)",
    "pandas (==2.2.3)",
    "parso (==0.8.4)",
    "pbs-installer (==2025.7.23)",
    "pillow (==11.2.1)",
    "pkginfo (==1.12.1.2)",
    "platformdirs (==4.3.8)",
    "prompt-toolkit (==3.0.51)",
    "psutil (==7.0.0)",
    "pure-eval (==0.2.3)",
    "pygments (==2.19.1)",
    "pyparsing (==3.2.3)",
    "pyproject-hooks (==1.2.0)",
    "python-dateutil (==2.9.0.post0)",
    "pytz (==2025.2)",
    "pywin32 (==310)",
    "pywin32-ctypes (==0.2.3)",
    "pyzmq (==26.4.0)",
    "rapidfuzz (==3.13.0)",
    "requests (==2.32.4)",
    "requests-toolbelt (==1.0.0)",
    "scikit-learn (==1.6.1)",
    "scipy (==1.15.3)",
    "seaborn (==0.13.2)",
    "shellingham (==1.5.4)",
    "six (==1.17.0)",
    "sniffio (==1.3.1)",
    "stack-data (==0.6.3)",
    "threadpoolctl (==3.6.0)",
    "tomlkit (==0.13.3)",
    "tornado (==6.5)",
    "traitlets (==5.14.3)",
    "trove-classifiers (==2025.8.6.13)",
    "typing-extensions (==4.13.2)",
    "tzdata (==2025.2)",
    "urllib3 (==2.5.0)",
    "virtualenv (==20.32.0)",
    "wcwidth (==0.2.13)",
    "zipp (==3.23.0)",
    "zstandard (==0.23.0)",
    "tqdm (>=4.67.1,<5.0.0)"
]



[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
